<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/number_1"
        style="@style/launch_mode_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/number_2" />

    <Button
        android:id="@+id/number_2"
        style="@style/launch_mode_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_2"
        app:layout_constraintStart_toEndOf="@id/number_1"
        app:layout_constraintEnd_toStartOf="@id/number_3"
        app:layout_constraintTop_toTopOf="@id/number_1" />

    <Button
        android:id="@+id/number_3"
        style="@style/launch_mode_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_3"
        app:layout_constraintTop_toTopOf="@id/number_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/number_2" />

</androidx.constraintlayout.widget.ConstraintLayout>