<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/letter_a"
        style="@style/launch_mode_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/letter_a"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/letter_b"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/letter_b"
        style="@style/launch_mode_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/letter_b"
        app:layout_constraintStart_toEndOf="@id/letter_a"
        app:layout_constraintEnd_toStartOf="@+id/letter_c"
        app:layout_constraintTop_toTopOf="@id/letter_a" />

    <Button
        android:id="@+id/letter_c"
        style="@style/launch_mode_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/letter_c"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/letter_b"
        app:layout_constraintTop_toTopOf="@id/letter_a" />


</androidx.constraintlayout.widget.ConstraintLayout>